Problem with EgoHyperGraph.java as vertex is not created before entering the hyperedge.create() methods. I think we still need to run some parts of the callback pipeline in the create method already!